# graDesign

./: CMakeLists.txt  README.md  RabbitFXtest.cpp  align_uint64_t.h  consumerBuff.cpp  consumerBuff.h  main.cpp  strobemer.cpp  strobemer.h
io/: Buffer.h  Common.h  DataPool.h  DataQueue.h  FastxChunk.h  FastxStream.cpp  Formater.cpp  Formater.h
originCode/: main.cpp  strobemer.cpp  strobemer.h
